Bug fix for issue of wrong panel visible when swtiching to the sign up version of the form.

--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,7 @@ button.ghost {
 
 .container.right-panel-active .overlay-left {
   opacity: 1;
+  z-index: 10;
 }
 
 .container.right-panel-active .sign-up-container {
